--- a/coffee-house/styles/styles.css
+++ b/coffee-house/styles/styles.css
@@ -1012,6 +1012,11 @@ img {
   border: 1px solid var(--color-border-dark);
 }
 
+.load-button svg {
+  pointer-events: none;
+  user-select: none;
+}
+
 @media screen and (max-width: 768px) {
 
   .menu-grid {
