--- a/coffee-house/styles/styles.css
+++ b/coffee-house/styles/styles.css
@@ -462,6 +462,8 @@ img {
 /* Enjoy section */
 
 .enjoy {
+  position: relative;
+  height: auto;
   width: 100%;
   border-radius: 40px;
   padding: 100px 100px;
@@ -469,9 +471,11 @@ img {
   background-position: center;
   margin-top: -2px;
   margin-bottom: 100px;
+  min-height: 644px;
 }
 
 .enjoy .container {
+  position: absolute;
   max-width: 530px;
 }
 
@@ -481,6 +485,25 @@ img {
   margin: 40px 0;
   font-weight: 400;
   line-height: 150%;
+}
+
+.enjoy .video-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  border-radius: 40px;
+}
+
+.video-wrapper::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
 
 @media screen and (max-width: 820px) {
